--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -764,3 +764,167 @@ button {
   left: 0;
   bottom: 0;
 }
+
+/* deals area style here */
+.deals_area {
+  margin-top: 40px;
+}
+.deals_card_wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+.deals_card_wrapper .deal_time {
+  margin: 0 25px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+.deals_card_wrapper .deals_content {
+  position: relative;
+  top: -145px;
+}
+.deals_card_wrapper .deal_time .single_time {
+  background-color: white;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid #ddd;
+  padding: 15px;
+}
+.deals_card_wrapper .deal_time .single_time span {
+  font-size: 13px;
+  font-weight: 600;
+  color: var(--primary-color);
+  line-height: 1.2;
+}
+.deals_card_wrapper .deal_time .single_time p {
+  font-size: 13px;
+  font-weight: 600;
+  color: var(--secondary-color);
+  line-height: 1.2;
+}
+.deals_card_wrapper .deal_details {
+  margin: 0 15px;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 20px;
+}
+.deals_card_wrapper .deal_details .title {
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--secondary-color);
+  margin-bottom: 10px;
+  transition: all 0.3s ease-in-out;
+  display: block;
+}
+.deals_card_wrapper .deal_details .title:hover {
+  color: var(--primary-color);
+}
+.deals_card_wrapper .deal_details .provider {
+  color: var(--gray-color);
+}
+.deals_card_wrapper .deal_details .provider span {
+  color: var(--primary-color);
+}
+.deals_card_wrapper .deal_details .price_cart {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.deals_card_wrapper .deal_details .price_cart p {
+  color: var(--primary-color);
+}
+.deals_card_wrapper .deal_details .price_cart p span {
+  color: var(--gray-color);
+}
+.deals_card_wrapper .deal_details .price_cart a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 14px;
+  color: var(--primary-color);
+  background-color: #def9ec;
+  border-radius: 4px;
+  padding: 5px 10px;
+}
+
+/*  */
+.single_deal_wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+.single_deal_wrapper .single_deal .title {
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 15px;
+  position: relative;
+}
+.single_deal_wrapper .single_deal > .title::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--gray-color);
+}
+.single_deal_wrapper .single_deal > .title::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 20%;
+  height: 1px;
+  background-color: var(--primary-color);
+}
+.single_deal_wrapper .single_deal .single_item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 45px;
+}
+.single_deal_wrapper .single_deal .deal_item {
+  margin-top: 25px;
+}
+.single_deal_wrapper .single_deal .single_item .item_image {
+  min-width: 110px;
+  min-height: 110px;
+  background-color: #f7f8fa;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.single_deal_wrapper .single_deal .single_item .item_content .title {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--secondary-color);
+  line-height: 1.4;
+  display: block;
+  /* margin-bottom: 5px; */
+  padding-bottom: 5px;
+}
+.single_deal_wrapper .single_deal .single_item .item_content .ratting {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: var(--gray-color);
+  font-size: 14px;
+}
+.single_deal_wrapper .single_deal .single_item .item_content .price {
+  color: var(--primary-color);
+  font-size: 15px;
+}
+.single_deal_wrapper .single_deal .single_item .item_content .price span {
+  color: var(--gray-color);
+  font-size: 15px;
+}
