--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -959,3 +959,124 @@ button {
 .footer_area {
   margin-top: 35px;
 }
+.footer_widget {
+  display: grid;
+  grid-template-columns: 290px repeat(4, 1fr);
+  gap: 25px;
+  justify-content: space-between;
+}
+.footer_widget .single_widget .sub_title {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.footer_widget .single_widget .contact_info {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  margin-bottom: 15px;
+}
+.footer_widget .single_widget .contact_info .single_info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer_widget .single_widget .contact_info .single_info img {
+  min-width: 20px;
+  min-height: 20px;
+}
+.footer_widget .single_widget .contact_info p {
+  font-size: 13px;
+}
+.footer_widget .single_widget .method_wrapper .title {
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: 16px;
+  margin-bottom: 10px;
+}
+.footer_widget .single_widget .method_wrapper .payment_text {
+  margin-bottom: 20px;
+}
+.footer_widget .single_widget .image_group {
+  max-height: 80px;
+}
+.footer_widget .single_widget .payment_image {
+  display: flex;
+  align-items: center;
+  gap: 0;
+}
+.footer_widget .single_widget .widget_title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.footer_widget .single_widget ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.footer_widget .single_widget ul li a {
+  font-size: 13px;
+  color: var(--secondary-color);
+  transition: all 0.3s ease;
+}
+.footer_widget .single_widget ul li a:hover {
+  color: var(--primary-color);
+}
+.footer_area .devider {
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 1px;
+  background-color: var(--primary-color);
+}
+.copyright_area {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+  margin-bottom: 20px;
+}
+.copyright_area .contact_info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 25px;
+}
+.copyright_area .contact_info .single_contact {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+}
+.copyright_area .contact_info .single_contact .contact_text span {
+  color: var(--primary-color);
+}
+.copyright_area .contact_info .single_contact .contact_text p {
+  color: var(--gray-color);
+}
+.copyright_area .copyright_text span {
+  color: var(--primary-color);
+}
+.copyright_area .social_info .social_icon {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.copyright_area .social_info .social_icon h3 {
+  font-size: 16px;
+  font-weight: 600;
+}
+.copyright_area .social_info .social_icon .icons {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.copyright_area .social_info .social_icon .icons a {
+  width: 25px;
+  height: 25px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
