--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,8 +216,8 @@ button {
 
 /* header style here */
 .header-top-wrapper {
-  padding: 30px 0 30px 0;
-  border-bottom: 1px solid var(--gray-color);
+  padding: 20px 0 20px 0;
+  border-bottom: 1px solid #eee;
 }
 .header-top {
   display: flex;
@@ -360,6 +360,7 @@ button {
   font-size: 14px;
   font-weight: 500;
   color: #253d4e;
+  margin-left: 5px;
 }
 
 .menu a {
@@ -412,7 +413,7 @@ button {
 }
 .hero-text h1 {
   font-family: var(--primary-font);
-  font-size: 40px;
+  font-size: 30px;
   letter-spacing: 1.5px;
 }
 .hero-text p {
@@ -703,6 +704,16 @@ button {
   padding: 20px;
   position: relative;
 }
+.bestSells_wrapper .sell_card_wrapper .sell_card .sell_img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 170px;
+}
+.bestSells_wrapper .sell_card_wrapper .sell_card .sell_img img {
+  width: 100%;
+}
 .bestSells_wrapper .sell_card_wrapper .sell_card .badge {
   position: absolute;
   top: 1px;
@@ -771,19 +782,18 @@ button {
 }
 .deals_card_wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 20px;
 }
 .deals_card_wrapper .deal_time {
-  margin: 0 25px;
+  margin: 0 15px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 8px;
   margin-bottom: 10px;
 }
 .deals_card_wrapper .deals_content {
-  position: relative;
-  top: -145px;
+  margin-top: -145px;
 }
 .deals_card_wrapper .deal_time .single_time {
   background-color: white;
@@ -793,7 +803,7 @@ button {
   justify-content: center;
   flex-direction: column;
   border: 1px solid #ddd;
-  padding: 15px;
+  padding: 10px;
 }
 .deals_card_wrapper .deal_time .single_time span {
   font-size: 13px;
@@ -810,9 +820,11 @@ button {
 .deals_card_wrapper .deal_details {
   margin: 0 15px;
   background-color: white;
-  border: 1px solid #ddd;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 6px;
   padding: 20px;
+  position: relative;
+  z-index: 10;
 }
 .deals_card_wrapper .deal_details .title {
   font-size: 15px;
@@ -859,6 +871,7 @@ button {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
+  margin-top: 45px;
 }
 .single_deal_wrapper .single_deal .title {
   font-size: 20px;
@@ -882,7 +895,7 @@ button {
   bottom: 0;
   left: 0;
   right: 0;
-  width: 20%;
+  width: 30%;
   height: 1px;
   background-color: var(--primary-color);
 }
@@ -912,6 +925,10 @@ button {
   display: block;
   /* margin-bottom: 5px; */
   padding-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+}
+.single_deal_wrapper .single_deal .single_item .item_content .title:hover {
+  color: var(--primary-color);
 }
 .single_deal_wrapper .single_deal .single_item .item_content .ratting {
   display: flex;
@@ -972,7 +989,7 @@ button {
 .footer_widget .single_widget .contact_info {
   display: flex;
   align-items: center;
-  gap: 4px;
+  gap: 10px;
   margin-bottom: 15px;
 }
 .footer_widget .single_widget .contact_info .single_info {
@@ -1053,6 +1070,7 @@ button {
 }
 .copyright_area .contact_info .single_contact .contact_text p {
   color: var(--gray-color);
+  font-size: 14px;
 }
 .copyright_area .copyright_text span {
   color: var(--primary-color);
