all issue fixed site full design done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1536,6 +1536,7 @@ button {
   font-weight: 500;
   padding: 10px 30px;
   margin-top: 10px;
+  cursor: pointer;
 }
 .price_range {
   position: relative;
